Closed
Bug 1800030
Opened 3 years ago
Closed 3 years ago
Perma /builds/worker/checkouts/gecko/layout/xul/nsXULPopupManager.cpp:1717:24: error: unused variable 'item' [-Werror=unused-variable]
Categories
(Core :: XUL, defect, P5)
Core
XUL
Tracking
()
RESOLVED
FIXED
108 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox106 | --- | unaffected |
| firefox107 | --- | unaffected |
| firefox108 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: emilio)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: imoraru [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=396123391&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Z4sxW4SHTSaPiVEdjMuMiA/runs/0/artifacts/public/logs/live_backing.log
[task 2022-11-10T05:17:57.505Z] 05:17:57 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/layout/xul'
[task 2022-11-10T05:17:57.510Z] 05:17:57 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -std=gnu++17 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/c++/7.5.0 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu/c++/7.5.0 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -o Unified_cpp_layout_xul1.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DOS_POSIX=1 -DOS_LINUX=1 -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/layout/xul -I/builds/worker/workspace/obj-build/layout/xul -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/layout/base -I/builds/worker/checkouts/gecko/layout/generic -I/builds/worker/checkouts/gecko/layout/painting -I/builds/worker/checkouts/gecko/layout/style -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/xul -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -gdwarf-4 -freorder-blocks -O2 -fno-omit-frame-pointer -funwind-tables -Werror -Wall -Wempty-body -Wignored-qualifiers -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wno-invalid-offsetof -Wno-error=deprecated -Wduplicated-cond -Wimplicit-fallthrough -Wlogical-op -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wformat -Wformat-overflow=2 -Wno-psabi -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pango-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/glib-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/cairo -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pixman-1 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/freetype2 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/libpng12 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gdk-pixbuf-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gio-unix-2.0/ -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/harfbuzz -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/atk-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi2-atk/2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/dbus-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/dbus-1.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/unix-print -pthread -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/Unified_cpp_layout_xul1.o.pp Unified_cpp_layout_xul1.cpp
[task 2022-11-10T05:17:57.511Z] 05:17:57 INFO - In file included from Unified_cpp_layout_xul1.cpp:20:0:
[task 2022-11-10T05:17:57.512Z] 05:17:57 INFO - /builds/worker/checkouts/gecko/layout/xul/nsXULPopupManager.cpp: In member function 'bool nsXULPopupManager::IsPopupOpen(nsIContent*)':
[task 2022-11-10T05:17:57.512Z] 05:17:57 ERROR - /builds/worker/checkouts/gecko/layout/xul/nsXULPopupManager.cpp:1717:24: error: unused variable 'item' [-Werror=unused-variable]
[task 2022-11-10T05:17:57.512Z] 05:17:57 INFO - if (nsMenuChainItem* item = FindPopup(aPopup)) {
[task 2022-11-10T05:17:57.512Z] 05:17:57 INFO - ^~~~
[task 2022-11-10T05:17:57.513Z] 05:17:57 INFO - cc1plus: all warnings being treated as errors
[task 2022-11-10T05:17:57.513Z] 05:17:57 ERROR - gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:669: Unified_cpp_layout_xul1.o] Error 1
[task 2022-11-10T05:17:57.513Z] 05:17:57 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/layout/xul'
Comment 1•3 years ago
|
||
Hi Emilio! Can you please take a look at this? I think this might be caused by your recent changes in Bug 1799918.
Thank you!
Flags: needinfo?(emilio)
Comment 2•3 years ago
|
||
Set release status flags based on info from the regressing bug 1799918
status-firefox106:
--- → unaffected
status-firefox107:
--- → unaffected
status-firefox108:
--- → affected
status-firefox-esr102:
--- → unaffected
| Assignee | ||
Updated•3 years ago
|
Assignee: nobody → emilio
| Assignee | ||
Updated•3 years ago
|
Flags: needinfo?(emilio)
| Assignee | ||
Comment 3•3 years ago
|
||
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/3136d6151dad
Fix WError on opt builds.
Comment 5•3 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch
| Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•