Bug 1800030 - Fix WError on opt builds.

Differential Revision: https://phabricator.services.mozilla.com/D161777